update: alterações gerais

--- a/index.html
+++ b/index.html
@@ -576,9 +576,9 @@
                         </div>
                     </div>
                     <div class="cta-buttons">
-                        <a href="#" class="btn btn-primary">BUY ON PULSEX</a>
+                        <a href="#" class="btn btn-primary">BUY ON PUMPTIRES</a>
                         <a href="#" class="btn btn-secondary">CHART ON DEXSCREENER</a>
-                        <a href="#" class="btn btn-primary">JOIN THE PACK</a>
+                        <a href="#" class="btn btn-primary">JOIN TELEGRAM</a>
                     </div>
                 </div>
             </div>
