--- a/index.html
+++ b/index.html
@@ -372,10 +372,12 @@
 
 .token-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 1.5rem;
     margin-bottom: 2rem;
+    width: 100%;
 }
+
 
 
         .token-card {
@@ -501,7 +503,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="#terminal" class="btn btn-primary">TALK TO NEIRO</a>
-                <a href="#token" class="btn btn-secondary">JOIN THE PACK</a>
+                <a href="#token" class="btn btn-secondary">JOIN TELEGRAM</a>
             </div>
         </section>
 
