update: alterações gerais

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="#terminal" class="btn btn-primary">TALK TO NEIRO</a>
-                <a href="#token" class="btn btn-secondary">JOIN TELEGRAM</a>
+                <a href="https://x.com/IsTheNeiro" class="btn btn-secondary">FOLLOW X</a>
             </div>
         </section>
 
@@ -580,7 +580,7 @@
                     <div class="cta-buttons">
                         <a href="#" class="btn btn-primary">BUY ON PUMPTIRES</a>
                         <a href="#" class="btn btn-secondary">CHART ON DEXSCREENER</a>
-                        <a href="#" class="btn btn-primary">JOIN TELEGRAM</a>
+                        <a href="https://x.com/IsTheNeiro" class="btn btn-primary">JOIN TWITTER</a>
                     </div>
                 </div>
             </div>
